@@ -1,3 +1,8 @@
+2006-10-10  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/proj.c,nad2nad.c,cs2cs.c: Increase MAX_LINE to 1000 per
+	request from Dan Scheirer.
+
 2006-10-01  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* nad/Makefile.am: added test target.
